--- a/ConnectFour.html
+++ b/ConnectFour.html
@@ -9,6 +9,8 @@
 <body>
 	<h1>Connect Four!</h1>
     <canvas id="board" width="700" height="600"></canvas>
+    <a href="Instructions.html" target="_blank">Click to open instructions</a>
+
     <script>
         const boardWidth=7;
         const boardHeight=6;
