--- a/ConnectFour.html
+++ b/ConnectFour.html
@@ -7,9 +7,11 @@
 </head>
     
 <body>
-	<h1>Connect Four!</h1>
+	<h1>Welcome to Connect Four!</h1>
     <canvas id="board" width="700" height="600"></canvas>
-    <a href="Instructions.html" target="_blank">Click to open instructions</a>
+    <a href="Instructions.html" target="_blank">Instructions</a>
+    <button type="button">Reset board</button>
+    <p id="turn">Player 1 turn!</p>
 
     <script>
         const boardWidth=7;
@@ -52,6 +54,11 @@
             }
         }
         function makeMove(event){
+            if(P1turn) {
+                turn.innerHTML = "Player 1 turn!";
+            } else {
+                turn.innerHTML = "Player 2 turn!";
+            }
             var x= 0;
 			var y= 0;
 			if (event.x != undefined && event.y != undefined){
