--- a/Team05F14.html
+++ b/Team05F14.html
@@ -250,6 +250,7 @@
         //Begins a new game
         function resetBoard() {
             initializeBoard();
+            turn.innerHTML = "Player 1 turn!";
             winner.innerHTML = "";
         }
     
