re initializing totalPieces to 0 Tie now works

--- a/Team05F14.html
+++ b/Team05F14.html
@@ -60,6 +60,7 @@
         }
         //Sets all positions on board to empty for resetting the game
         function initializeBoard(){
+            totalPieces = 0;
             playing = true;
             listenerActivation();
             for(var i=0; i < boardWidth; i++){
