--- a/Team05F14.html
+++ b/Team05F14.html
@@ -126,7 +126,7 @@
 			ctx.beginPath();
 			ctx.arc(x + cellSize/2, y + cellSize/2, 40, 0, 2*Math.PI);
 			if (identity == empty) {
-				ctx.fillStyle = "white";
+				ctx.fillStyle = "#99CCCC";
 			} else if (identity == red) {
 				ctx.fillStyle = "red";
 			} else if (identity == black) {
