--- a/Team05F14.html
+++ b/Team05F14.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="ConnectFour.css">
     <title>Connect Four</title>
     
